Implemented display cities list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CitiesNavigator</string>
+    <string name="message_error">Get results error</string>
 </resources>
