--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CitiesNavigator</string>
     <string name="message_error">Get results error</string>
+
+    <string name="menu_item_search_title">Search</string>
 </resources>
